--- a/less/slides/full-bleed.less
+++ b/less/slides/full-bleed.less
@@ -18,6 +18,7 @@
         @media @screen-small-above {
             padding: 20px;
         }
+        z-index: 1;
 
         p {
             font-size: 20px;
